# fxn-llm

./: Changelog.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml  testpypi.yml
fxn_llm/: __init__.py  locally.py  version.py
test/: openai_test.py
